--- a/package.json
+++ b/package.json
@@ -23,22 +23,18 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "5.14.1",
-    "antd-img-crop": "^4.21.0",
     "antd-input-otp": "^2.0.5",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "dotenv": "16.3.1",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "redux-devtools-extension": "^2.13.9",
-    "umi-request": "^1.2.3",
-    "uuid": "^9.0.1",
-    "zustand": "^4.4.6"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
@@ -53,7 +49,6 @@
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.16",
     "clsx": "^2.0.0",
-    "dayjs": "^1.11.10",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
@@ -64,7 +59,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "styled-components": "^6.1.1",
+    "react-icons": "^5.0.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
