--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "dotenv": "16.3.1",
+    "rc-upload": "^4.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "redux-devtools-extension": "^2.13.9",
@@ -41,6 +43,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-highlight-words": "^0.16.7",
+    "@types/react-lazy-load-image-component": "^1.6.3",
     "@types/react-redux": "^7.1.31",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.7",
