--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "dotenv": "16.3.1",
-    "rc-upload": "^4.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
@@ -63,6 +62,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.7",
+    "react-froala-wysiwyg": "^4.2.0",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "tailwind-merge": "^2.0.0",
