--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.0.2",
+    "use-react-router-breadcrumbs": "^4.0.1",
     "vite": "^4.4.5",
     "vite-plugin-imagemin": "^0.6.1"
   }
