--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/react-icons": "^3.0.0",
     "antd": "5.14.1",
     "antd-input-otp": "^2.0.5",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "dotenv": "16.3.1",
+    "lucide-react": "^0.383.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
@@ -58,12 +60,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "framer-motion": "^10.16.4",
-    "lucide-react": "^0.292.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "react-froala-wysiwyg": "^4.2.0",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.2.1",
     "react-quill": "^2.0.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.5",
